syntax = "proto3";

package worldengine.cardinal.v1;

import "google/protobuf/struct.proto";
import "worldengine/cardinal/v1/snapshot.proto";

option csharp_namespace = "WorldEngine.Proto.Cardinal.V1";
option go_package = "github.com/argus-labs/world-engine/proto/gen/go/worldengine/cardinal/v1;cardinalv1";

// DebugService provides debugging and introspection endpoints for Cardinal.
// This service is intended for dev tooling (e.g., AI agents, debugging tools).
service DebugService {
  // Introspect returns metadata about the registered types in the world.
  // The result includes JSON schemas for commands, components, and events.
  rpc Introspect(IntrospectRequest) returns (IntrospectResponse);

  // Pause stops tick execution. The world remains running but no ticks are processed.
  rpc Pause(PauseRequest) returns (PauseResponse);

  // Resume continues tick execution after a pause.
  rpc Resume(ResumeRequest) returns (ResumeResponse);

  // Step executes a single tick. Only works when paused.
  rpc Step(StepRequest) returns (StepResponse);

  // Reset restores the world to its initial state (before tick 0).
  rpc Reset(ResetRequest) returns (ResetResponse);

  // GetState returns the current world state snapshot.
  rpc GetState(GetStateRequest) returns (GetStateResponse);
}

// IntrospectRequest is the request message for the Introspect RPC.
message IntrospectRequest {}

// IntrospectResponse contains introspection metadata about the world.
message IntrospectResponse {
  // JSON schemas for registered commands.
  repeated TypeSchema commands = 1;

  // JSON schemas for registered components.
  repeated TypeSchema components = 2;

  // JSON schemas for registered events.
  repeated TypeSchema events = 3;
}

// TypeSchema represents the JSON schema for a registered type.
message TypeSchema {
  // Name of the type.
  string name = 1;

  // JSON schema for the type.
  google.protobuf.Struct schema = 2;
}

// PauseRequest is the request message for the Pause RPC.
message PauseRequest {}

// PauseResponse is the response message for the Pause RPC.
message PauseResponse {
  // The tick height at which the world was paused.
  uint64 tick_height = 1;
}

// ResumeRequest is the request message for the Resume RPC.
message ResumeRequest {}

// ResumeResponse is the response message for the Resume RPC.
message ResumeResponse {}

// StepRequest is the request message for the Step RPC.
message StepRequest {}

// StepResponse is the response message for the Step RPC.
message StepResponse {
  // The tick height after stepping.
  uint64 tick_height = 1;
}

// ResetRequest is the request message for the Reset RPC.
message ResetRequest {}

// ResetResponse is the response message for the Reset RPC.
message ResetResponse {}

// GetStateRequest is the request message for the GetState RPC.
message GetStateRequest {}

// GetStateResponse is the response message for the GetState RPC.
message GetStateResponse {
  // Whether the world is currently paused.
  bool is_paused = 1;

  // The current world state snapshot (includes tick_height).
  Snapshot snapshot = 2;
}
